--- a/My Agent/Object Agent/操作手册.md
+++ b/My Agent/Object Agent/操作手册.md
@@ -13,15 +13,15 @@
 ## 3. 团队成员名录
 | 角色 | 智能体名称 | 职责 | 产出物 |
 | :--- | :--- | :--- | :--- |
-| **导师/向导** | **Project-Lead-Agent** | **总指挥，与用户直接对话，分配任务** | 任务建议、进度报告 |
-| 产品经理 | PM-Agent | 需求分析 | `docs/prd.md` |
-| UI设计师 | Design-Agent | 界面设计 | `docs/design_spec.md` |
-| 架构师 | Arch-Agent | 系统设计 | `docs/architecture.md` |
-| 开发者 | Dev-Agent | 编写代码 | 源代码 |
-| 安全专家 | Security-Agent | 安全审计 | `docs/security_audit.md` |
-| 测试工程师 | QA-Agent | 测试验证 | `docs/test_plan.md` |
-| 运维工程师 | Ops-Agent | 部署配置 | `Dockerfile`, `docker-compose.yml` |
-| **第三方监理** | **Auditor-Agent** | **验收评分，质量把关** | `docs/audit_report.md` |
+| **导师/向导** | **项目负责人** | **总指挥，与用户直接对话，分配任务** | 任务建议、进度报告 |
+| 产品经理 | 产品经理 | 需求分析 | `docs/prd.md` |
+| UI设计师 | 设计师 | 界面设计 | `docs/design_spec.md` |
+| 架构师 | 系统架构师 | 系统设计 | `docs/architecture.md` |
+| 开发者 | 全栈开发专家 | 编写代码 | 源代码 |
+| 安全专家 | 安全工程师 | 安全审计 | `docs/security_audit.md` |
+| 测试工程师 | 测试工程师 | 测试验证 | `docs/test_plan.md` |
+| 运维工程师 | 构维工程师 | 部署配置 | `Dockerfile`, `docker-compose.yml` |
+| **第三方监理** | **项目监理** | **验收评分，质量把关** | `docs/audit_report.md` |
 
 ## 4. 标准作业程序 (SOP)
 
