docs(agent): 更新智能体操作手册和规则文档
- 在规则文档中添加清理过程性文件的指导原则
- 在操作手册中优化措辞并补充文件清理的最佳实践
- 统一术语表述（如"项目负责人"替代"Project-Lead"）

--- a/My Agent/Object Agent/操作手册.md
+++ b/My Agent/Object Agent/操作手册.md
@@ -49,6 +49,7 @@
 1.  **Ops**: 呼叫 `@Ops-Agent` 生成部署文件。
 
 ## 5. 最佳实践
-- **多问"为什么"**: 如果 Project-Lead 建议你做某事，但你不理解，可以追问。
-- **重视 Auditor**: Auditor 的评分低于 80 分时，建议不要进入部署阶段。
+- **多问"为什么"**: 如果项目负责人建议你做某事，但你不理解，可以追问。
+- **保持整洁**: 每个阶段结束后，务必按照项目负责人的建议清理过程性文件，这能避免后续工作受到干扰。
+- **重视项目监理**: 项目监理的评分低于 80 分时，建议不要进入部署阶段。
 - **文档驱动**: 所有的沟通结果都应沉淀在 `docs/` 目录下，这是团队协作的唯一凭证。
